Enrich Concurrency and Memory Management modules to 4-5 YOE handbook; add comprehensive Collections canvas